# validating-lightning-signer

./: .codecov.yml  .coderabbit.yaml  .dir-locals.el  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  build.rs  codecov.yml  coverage-false-positives.txt  deny.toml  docker-compose.yml  flake.nix  opencode.json  rustfmt.toml  tarpaulin.toml
bitcoind-client/: Cargo.toml
bitcoind-client/examples/: esplora_example.rs
bitcoind-client/src/: bitcoind_client.rs  convert.rs  esplora_client.rs  lib.rs
bitcoind-client/tests/: system_test.rs
bolt-derive/: Cargo.toml
bolt-derive/src/: lib.rs
embedded/: Cargo.toml  Dockerfile  README.md  memory.x
embedded/scripts/: build-and-push  install-deps
embedded/src/: entry.rs  main.rs  tests.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/data/: sample
fuzz/fuzz_targets/: channel-afl.rs  channel.rs
fuzz/scripts/: cov  fuzz  fuzz-afl
fuzz/src/: channel.rs  profile_channel.rs
greenlight-signer/: Cargo.toml  README.md
greenlight-signer-hsmd/: Cargo.toml
greenlight-signer-hsmd/src/: client.rs  connection.rs  grpc_main.rs  lib.rs  main.rs  test.rs  util.rs  vls_main.rs
greenlight-signer/src/: client.rs  connection.rs  handler.rs  lib.rs  main.rs
lightning-signer-core/: Cargo.toml
lightning-signer-core/src/: channel.rs  example_main.rs  lib.rs  monitor.rs  node.rs  nostd.rs  ready_channel_tests.rs  sign_counterparty_commitment_tests.rs  sign_counterparty_htlc_sweep_tests.rs  sign_delayed_sweep_tests.rs  sign_funding_tests.rs  sign_holder_commitment_tests.rs  sign_htlc_tx_tests.rs  sign_justice_sweep_tests.rs  sign_mutual_close_tests.rs  sign_onchain_tx_tests.rs  sync.rs  validate_counterparty_revocation_tests.rs  validate_holder_commitment_tests.rs  wallet.rs
lightning-signer-core/tests/: functional_test.rs
lightning-signer-server/: Cargo.toml  build.rs
lightning-signer-server/src/: bitcoind_client.rs  chain_follower.rs  chain_test_main.rs  client_main.rs  convert.rs  fslogger.rs  lib.rs  nodefront.rs  persist_test_main.rs  server_main.rs  util.rs
lightning-storage-server/: Cargo.toml  README.md  build.rs
lightning-storage-server/examples/: database_bench.rs  test_concurrent_access.rs
lightning-storage-server/lib/: Cargo.toml  build.rs
lightning-storage-server/lssd/: Cargo.toml
lightning-storage-server/proto/: lss.proto
lightning-storage-server/src/: chacha20.rs  client_main.rs  database.rs  lib.rs  main.rs  model.rs  server_main.rs  util.rs
lightning-storage-server/tests/: Cargo.toml  integration_test.rs
lnrod/: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt
lnrod/doc/: sample-config.toml
lnrod/scripts/: compile-proto  launch-esplora-regtest
lnrod/src/: bitcoind_client.rs  byte_utils.rs  config.rs  convert.rs  disk.rs  fslogger.rs  hex_utils.rs  lib.rs  log_utils.rs  logadapter.rs  macro_logger.rs  main_cli.rs  main_server.rs  net.rs  util.rs
lnrod/tests/: integration-test.py
psbt-fixup/: Cargo.toml
psbt-fixup/src/: lib.rs
vls-cli/: Cargo.toml
vls-cli/src/: main.rs
vls-cli/tests/: address_cli_tests.rs  rpc_server_system_test.rs
vls-common/: Cargo.toml
vls-common/src/: lib.rs  macros.rs
vls-core/: Cargo.toml
vls-core-test/: Cargo.toml  README.md
vls-core-test/benches/: commitment_bench.rs  persist_bench.rs  secp_bench.rs
vls-core-test/src/: example_main.rs
vls-core-test/tests/: functional_test.rs  functional_test_utils.rs
vls-core/benches/: keysend_bench.rs  secp_bench.rs
vls-core/src/: channel.rs  invoice.rs  lib.rs  monitor.rs  node.rs  nostd.rs  ready_channel_tests.rs  setup_channel_tests.rs  sign_counterparty_commitment_tests.rs  sign_counterparty_htlc_sweep_tests.rs  sign_delayed_sweep_tests.rs  sign_holder_commitment_tests.rs  sign_htlc_tx_tests.rs  sign_justice_sweep_tests.rs  sign_mutual_close_tests.rs  sign_onchain_tx_tests.rs  validate_counterparty_revocation_tests.rs  validate_holder_commitment_tests.rs  wallet.rs
vls-core/tests/: functional_test.rs  node_randomized_scheduler_test.rs
vls-frontend/: Cargo.toml
vls-frontend/examples/: lss_example.rs
vls-frontend/src/: chain_follower.rs  external_persist.rs  follower.rs  frontend.rs  heartbeat.rs  lib.rs
vls-persist/: Cargo.toml
vls-persist/src/: backup_persister.rs  dump_sample_data_main.rs  gen_sample_data_main.rs  kv_json.rs  kvv.rs  lib.rs  migrate_to_redb_main.rs  model.rs  persist_json.rs  persist_test_main.rs  ser_util.rs  thread_memo_persister.rs  util.rs
vls-persist/tests/: dump_sample_data_main.rs  persist_test_main.rs
vls-policy-derive/: Cargo.toml
vls-protocol/: Cargo.toml  README.md  types.csv
vls-protocol-client/: Cargo.toml
vls-protocol-client/src/: dyn_signer.rs  lib.rs  signer_port.rs
vls-protocol-signer/: Cargo.toml
vls-protocol-signer/src/: approver.rs  handler.rs  lib.rs  util.rs
vls-protocol/fixtures/: r_3.hex  r_5.hex  r_6.hex  w_3.hex  w_5.hex  w_6.hex
vls-protocol/src/: error.rs  features.rs  io.rs  lib.rs  model.rs  msgs.rs  psbt.rs  util.rs
vls-proxy/: Cargo.toml  build.rs
vls-proxy/examples/: compact_proof.rs  tracing_log.rs
vls-proxy/src/: client.rs  cloud_system_test.rs  config.rs  connection.rs  decode-vls.rs  embedded.rs  embedded_main.rs  frontend_system_test.rs  grpc_main.rs  inplace_main.rs  lib.rs  nodefront.rs  portfront.rs  recovery.rs  serial.rs  serial_main.rs  socket_main.rs  socket_test_main.rs  test.rs  tx_util.rs  util.rs  vls_main.rs  vlsd2_main.rs
vls-proxy/tests/: cloud_system_test.rs  frontend_system_test.rs
vls-server/: Cargo.toml  build.rs
vls-server/src/: fslogger.rs  lib.rs  nodefront.rs  tstamp.rs  util.rs
vls-signer-stm32/: Cargo.toml  Makefile  README.md  build.rs  memory.x
vls-signer-stm32/.cargo/: config  config.toml
vls-signer-stm32/src/: approver.rs  bench_crypto.rs  demo_signer_main.rs  device.rs  fat_json_persist.rs  fat_logger.rs  logger.rs  random_starting_time.rs  randomstartingtime.rs  sdcard.rs  setup.rs  (+4 more)
vls-util/: Cargo.toml  build.rs
vlsd/: Cargo.toml  build.rs
wasm/: Cargo.toml  README.md  index.html
(+406 files in other folders)
