[workspace]

resolver = "2"

members = [
    "vls-common",
    "vls-core",
    "vls-frontend",
    "vls-cli",

    "bolt-derive",
    "vls-persist",
    "vls-protocol",
    "vls-protocol-client",
    "vls-protocol-signer",
    "vls-proxy",
]

exclude = [
    "vls-signer-stm32",
    "embedded",
    "wasm",
    "lightning-storage-server",
    "vls-core-test",
]
