[workspace]

resolver = "2"

members = [
    "vls-common",
    "vls-core",
    "vls-frontend",
    "vls-cli",

    "bolt-derive",
    "policy-derive",
    "vls-persist",
    "vls-protocol",
    "vls-protocol-client",
    "vls-protocol-signer",
    "vls-proxy",
]

exclude = [
    "vls-signer-stm32",
    "embedded",
    "wasm",
    "lightning-storage-server",
    "vls-core-test",
]

[workspace.dependencies]
tonic = { version = "0.12.0", default-features = false }
tower = { version = "0.4.0" }
prost = { version = "0.13.0" }
env_logger = { version = ">=0.9,<0.12" }
