[workspace]

resolver = "2"

members = [
  "vls-common",
  "vls-core",
  "vls-frontend",
  "vls-cli",

  "bolt-derive",
  "policy-derive",
  "vls-persist",
  "vls-protocol",
  "vls-protocol-client",
  "vls-protocol-signer",
  "vls-proxy",
  "vls-util",
  "vlsd",
]

exclude = [
  "vls-signer-stm32",
  "embedded",
  "wasm",
  "lightning-storage-server",
  "vls-core-test",
  "lnrod",
]

[workspace.dependencies]
tonic = { version = "0.12.0", default-features = false }
tower = { version = "0.4.0" }
prost = { version = "0.13.0" }
env_logger = { version = ">=0.9,<0.12" }
clap = { version = "4.0.0", features = ["derive"] }
txoo = { version = "0.10.0", default-features = false }
txoo-bitcoind-client = { version = "0.10.0", default-features = false }
test-log = "0.2.8"
tempfile = "3.10.1"
log = { version = "0.4" }
hex = { version = "0.4", default-features = false }
tracing = { version = "0.1.40", default-features = false }
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
async-trait = "0.1"
tokio = { version = "1.27" }
url = "2.3"
proc-macro2 = "1.0"
quote = "1.0"
