[package]
name = "bitcoind-client"
version = "0.1.0-5"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library for implementing a bitcoind RPC client."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
readme = "../README.md"
rust-version = "1.60.0"

[features]
default = ["debug"]
test_utils = ["vls-core/test_utils"]
debug = ["log_pretty_print"]
log_pretty_print = []

[lib]
name = "bitcoind_client"
path = "src/lib.rs"

[dependencies]
log = { version="0.4.14", features = [ "std" ] }
serde = { version = "1.0.105", features = ["derive"]}
serde_json = { version = "1.0.48" }
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
vls-core = { path = "../vls-core" }
url = "2.2"

jsonrpc-async = "2.0.2"
async-trait = "0.1"
reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls"] }

[[example]]
name = "esplora_example"
