[package]
name = "bolt-derive"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "A library implementing Bitcoin Lightning style serialization for structures"
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
