[package]
name = "greenlight-signer-hsmd"
version = "0.1.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>"]
edition = "2018"

[dependencies]
lightning-signer-core = { path = "../../rust-lightning-signer/lightning-signer-core" }
greenlight-signer = { path = "../greenlight-signer" }
secp256k1 = { version = "0.20", features = ["rand-std", "bitcoin_hashes"] }
nix = "0.22"
serde = "1.0"
log = "0.4"
env_logger = "0.9"
# .4 doesn't compile with 1.45.2
clap = "=3.0.0-beta.2"
# 0.2.5 doesn't compile with 1.45.2
http = "=0.2.4"

[dependencies.lightning-signer-server]
path = "../../rust-lightning-signer/lightning-signer-server"
default_features = false
features = ["persist_kv_json"]
