[package]
name = "greenlight-signer"
version = "0.1.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>"]
edition = "2018"

[dependencies]
lightning-signer-core = { path = "../lightning-signer-core" }
greenlight-protocol = { path = "../greenlight-protocol" }
secp256k1 = { version = "0.20", features = ["rand-std", "bitcoin_hashes"] }
nix = "0.22"
serde = "1.0"
log = "0.4"
env_logger = "0.9"
clap = "=3.0.0-beta.2"
