[package]
name = "lightning-signer-server"
version = "0.1.0-5"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library for implementing a Lightning signer server, dependent on the lightning-signer-core crate."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
readme = "../README.md"
rust-version = "1.58.0"
build = "build.rs"

[features]
default = ["log_pretty_print"]
grpc = ["frontend", "tokio", "tonic", "prost", "serde", "serde_json", "clap", "url", "lightning-signer-core/grpc"]
persist_kv_json = [ "kv", "persist" ]
persist = [ "serde", "serde_json", "serde_with", "lightning-signer-core/serde" ]
log_pretty_print = []
chain_test = ["clap", "url", "bitcoind-client"]
test_utils = ["lightning-signer-core/test_utils"]
bins = ["bip39", "rand", "ctrlc"]
frontend = ["vls-frontend"]

[lib]
name = "lightning_signer_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
log = { version="0.4.14", features = [ "std" ] }
time = "0.2"
lightning-signer-core = { path = "../lightning-signer-core", features = ["debug"] }
vls-frontend = { path = "../vls-frontend", optional = true }
bitcoind-client = { path = "../bitcoind-client", optional = true }
backtrace = "0.3"
bip39 = { version = "1.0.0", features = ["rand"], optional = true }
hex = "0.3.2"
rand = { version = "0.4", optional = true }
kv = { version = "0.22.0", features = ["json-value"], optional = true }
tonic = { version = "0.6", optional = true }
prost = { version = "0.9", optional = true }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"], optional = true }
serde = { version = "1.0.105", features = ["derive"], optional = true }
serde_json = { version = "1.0.48", optional = true }
serde_with = { version = "1.6.4", features = ["hex"], optional = true }
clap = { version = "=3.0.0-beta.2", optional = true }
ctrlc = { version = "3.1.9", features = ["termination"], optional = true }
triggered = "0.1.1"
tracing = { version = "0.1.32" }
tracing-subscriber = { version = "0.3.9" }
async-trait = "0.1"

url = { version = "2.2", optional = true }

# For logging in unit tests
test-log = "0.2.8"
env_logger = "0.9.0"

[dev-dependencies]
tempfile = "3.2.0"

[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "vls-cli"
path = "src/client_main.rs"
required-features = ["bins", "grpc"]

[[bin]]
name = "vlsd"
path = "src/server_main.rs"
required-features = ["bins", "grpc"]

[[bin]]
name = "persist_test"
path = "src/persist_test_main.rs"
required-features = ["bins", "persist_kv_json", "test_utils"]

[[bin]]
name = "chain_test"
path = "src/chain_test_main.rs"
required-features = ["bins", "chain_test"]
