[package]
name = "lightning-storage-server"
license = "Apache-2.0"
version = "0.3.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.66.0"

[lib]
name = "lightning_storage_server"
path = "src/lib.rs"

[features]
default = ["postgres", "crypt"]
postgres = ["tokio-postgres", "deadpool-postgres"]
test-postgres = []
dangerous-flags = []
crypt = []

[dependencies]
redb = "1.3"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.9", features = ["tls"] }
prost = "0.11"
triggered = "0.1"
ctrlc = "3"
log = "0.4"
clap = { version = "3.2", features = ["derive"] }
fern = { version = "0.6", features = ["colored"] }
time = { version = "=0.3.17", features = [ "formatting", "macros" ] }
url = "2.3"
hex = "0.4"
dirs = "4"
secp256k1 = { version = "0.24", features = ["rand"] }
bitcoin_hashes = "0.11"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio-postgres = { version = "0.7", optional = true }
futures = "0.3"
deadpool-postgres = { version = "0.10", optional = true }
itertools = "0.10"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "lssd"
path = "src/server_main.rs"

[[bin]]
name = "lss-cli"
path = "src/client_main.rs"

[[example]]
name = "database_bench"
