[workspace]
resolver = "2"
members = [
  "lib",
  "lssd"
]

[workspace.dependencies]
bitcoin_hashes = "0.11"
clap = { version = "3.2" }
hex = "0.4"
log = "0.4"
prost = "0.11"
secp256k1 = { version = "0.27.0" }
thiserror = "1.0"
tokio = { version = "=1.38.1", features = ["macros"] }
# beyond 1.38 MSRV was bumped to 1.70
tonic = { version = "0.9" }
