[workspace]
resolver = "2"
members = ["lib", "lssd"]

[workspace.dependencies]
bitcoin_hashes = ">=0.12.0,<=0.14.0"
clap = { version = "4.0.0" }
hex = "0.4"
log = "0.4"
secp256k1 = { version = "0.29.0" }
prost = "0.13"
thiserror = "1.0"
tokio = { version = "1.38.1", features = ["macros"] }
tonic = { version = "0.12.0" }
tonic-build = { version = "0.12.0" }
