[package]
name = "psbt-fixup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["bitcoin/std"]
no-std = ["bitcoin/no-std"]

[dependencies]
bitcoin = { version = "0.27.1", default_features = false, features = ["secp-lowmemory", "no-std"] }
