[package]
name = "vls-cli"
version = "0.14.0-rc.1"
edition = "2021"
license = "Apache-2.0"
description = "A CLI for interacting with the vlsd JSON-RPC API"
authors = ["Lakshya Singh <lakshay.singh1108@gmail.com>"]
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
system-test = []

[dependencies]
clap = { workspace = true }
jsonrpsee = { version = "0.24.8", features = ["http-client", "client-core"] }
tokio = { version = "1.27", features = ["macros"] }
anyhow = "1"
tracing = "0.1.34"
serde_json = { version = "1" }
tracing-subscriber = "0.3"
vlsd = { path = "../vlsd", version = "0.14.0-rc.1" }
http = { version = "1.0" }
base64 = "0.22.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "vls-cli"
path = "src/main.rs"

[[test]]
name = "rpc_server_system_test"
path = "tests/rpc_server_system_test.rs"
required-features = ["system-test"]
