[package]
name = "vls-common"
license = "Apache-2.0"
version = "0.14.0-rc.2"
authors = ["Devrandom <c1.devrandom@niftybox.net>"]
edition = "2021"
description = "Common code for Validating Lightning Signer"
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
readme = "../README.md"
rust-version = "1.74.0"

[features]
std = []

[dependencies]
hex = { workspace = true, features = ["alloc"] }
bitcoin = { workspace = true }
