[package]
name = "vls-core-test"
license = "Apache-2.0"
version = "0.9.1"
edition = "2018"
autotests = false

[dependencies]
vls-core = { path = "../vls-core" }
itertools = { version = "0.10", default-features = false }
test-log = "0.2.8"
env_logger = "0.9"
log = "0.4.14"

[dev-dependencies]
vls-core = { path = "../vls-core", features = ["test_utils"] }

[dev-dependencies.criterion]
version = "0.4.0"
default-features = false
features = ["html_reports"]

[dev-dependencies.bitcoin]
version = "0.29"
default-features = false
features = ["serde", "bitcoinconsensus"]

[dev-dependencies.lightning]
#git = "https://github.com/lightningdevkit/rust-lightning.git"
#rev = "a7600dcd584db0c46fdcd99d71d5b271f3052892"
#branch = "main"
#path = "../../rust-lightning/lightning"
version = "0.0.115"
default-features = false
features = ["grind_signatures", "unsafe_revoked_tx_signing"]

[[bin]]
name = "example_main"
path = "src/example_main.rs"

[[test]]
name = "functional_test"
path = "tests/functional_test.rs"

[[bench]]
name = "secp_bench"
harness = false

[[bench]]
name = "commitment_bench"
harness = false