[package]
name = "vls-core-test"
license = "Apache-2.0"
version = "0.11.0-rc.3"
edition = "2021"
autotests = false

[dependencies]
vls-core = { path = "../vls-core" }
itertools = { version = "0.10", default-features = false }
test-log = "0.2.8"
env_logger = "0.9"
log = "0.4.14"

[dev-dependencies]
vls-core = { path = "../vls-core", features = ["test_utils"] }
vls-persist = { path = "../vls-persist", features = ["redb-kvv"] }
tempfile = "3.2"

[dev-dependencies.criterion]
version = "0.4.0"
default-features = false
features = ["html_reports"]

[[bin]]
name = "example_main"
path = "src/example_main.rs"

[[test]]
name = "functional_test"
path = "tests/functional_test.rs"

[[bench]]
name = "secp_bench"
harness = false

[[bench]]
name = "commitment_bench"
harness = false

[[bench]]
name = "persist_bench"
harness = false
